fix: overflow

--- a/src/pages/styles/MusicPlay.less
+++ b/src/pages/styles/MusicPlay.less
@@ -7,6 +7,7 @@
   // border-radius: 10px;
   display: flex;
   flex-direction: row;
+  overflow: hidden;
 
   .music-search-root {
     width: 75vw;
@@ -348,7 +349,7 @@
     height: 100%;
   
     #music-canvas {
-      min-width: 0;
+      width: 100%;
       height: 100%;
     }
   }
